--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ android {
     namespace 'com.tachibana.downloader'
     compileSdkVersion 33
     defaultConfig {
-        applicationId 'com.tachibana.downloader'
-        minSdkVersion 19
-        targetSdkVersion 33
-        versionCode 15
+        applicationId 'com.test123dev786.downloader'
+        minSdkVersion 21
+        targetSdkVersion 34
+        versionCode 17
         /*
          * Convection:
          *  major.minor.[revision][-some_info]
          */
-        versionName '1.6.2'
+        versionName '1.6.3'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
