--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         android:required="false" />
     <uses-feature android:name="android.software.leanback"
         android:required="false" />
+    <uses-feature android:name="android.hardware.type.automotive"
+        android:required="true" />
 
     <application
         android:name="MainApplication"
